Update JVM config for JOL agent support